# MNIST_DEEP_LEARNING_CLASSIFIER

./: .gitignore  CmakeLists.txt  Dockerfile  docker_command.sh  execute.bash
dataset/: readme.md
include/parser/: mnists_parser.hpp
src/: main.cpp  mnists_parser.cpp  mnists_parser.hpp
tests/: CMakeLists.txt  gtest_main.cpp  hello_test.cc  hello_test.cpp  testParser.cpp  test_parser.cpp
